--- a/data/cover.tex
+++ b/data/cover.tex
@@ -25,7 +25,7 @@
 \begin{cabstract}
   遥感影像分类是遥感领域重要的研究内容，如何快速、准确地对遥感影像数据分类与识别是当前遥感领域的研究重点。然而，由于遥感数据固有的不确定性使得影像准确解译识别面临挑战。此外，高分辨率影像在提供高质量细节信息时其同类地物类内特征差异大，使得输出结果中类内差异大的地物会存在许多细碎的错分区域，同时正确识别明确、清晰的地物分类边界存在挑战。
 
-  近年来，随着深度学习技术的发展和全卷积分类网络的出现，基于深度学习理论的影像分类方法被广泛应用到遥感影像分类任务中。然而，当前基于全卷积网络的影像分类方法在池化处理和上采样操作中容易丢失影像低阶边界、位置等特征信息，导致地物分类边界存在混淆、歧义。此外，全卷积影像分类方法是像素级的分类，影像分类结果中同类地物区域内容易出现细碎的错分区域。于是改进现有的全卷积影像分类方法，提升影像分类质量，也具有重要的研究意义。生成对抗网络其判别器能够不断检测并纠正真实样布与生成数据间的差异，且模型的对抗损失一定程度上能够增强影像像素点间的连续性，保持整体的一致性。另一方面，对抗博弈过程中生成器能不断强化分割模型的预测能力，提升分类精度。
+  近年来，随着深度学习技术的发展和全卷积分类网络的出现，基于深度学习理论的影像分类方法被广泛应用到遥感影像分类任务中。然而，当前基于全卷积网络的影像分类方法在池化处理和上采样操作中容易丢失影像低阶边界、位置等特征信息，导致地物分类边界存在混淆、歧义。此外，全卷积影像分类方法是像素级的分类，影像分类结果中同类地物区域内容易出现细碎的错分区域。于是改进现有的全卷积影像分类方法，提升影像分类质量，也具有重要的研究意义。生成对抗网络其判别器能够不断检测并纠正真实样本与生成数据间的差异，且模型的对抗损失一定程度上能够增强影像像素点间的连续性，保持整体的一致性。另一方面，对抗博弈过程中生成器能不断强化分割模型的预测能力，提升分类精度。
   
   因此，本文将对抗训练的思想引入全卷积影像分类模型，提升影像分类精度，并对提出的基于条件生成对抗网络的影像分类方法进行改进。文中首先通过模糊聚类分割方法预处理高分影像数据，得到影像的同质性分割单元信息图。为了得到更清晰的地物分类边界，将分割单元的边界掩膜特征融合到模型上采样的特征图上，加强高阶特征的边界、位置信息。为了得到更完整的地物分类结果，文中对像素点类别预测时，考虑同质性分割单元内其他像素点间的相互关系，优化类别预测结果。基于上述思路，本课题论文对遥感影像地物分类问题加以研究和讨论。具体的研究内容如下：
   \begin{enumerate}[(1)]
