--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -26,22 +26,23 @@
 
 \section{国内外研究现状}
 \label{sec:second}
-为了方便介绍，本文中将未深度学习技术前提出的遥感影像分类方法称为传统的遥感影像分类方法。本节内容主要介绍了传统的高分辨率遥感影像分类识别方法和基于深度学习技术\citep{hinton2006fast, bengio2009learning, NIPS2012_4824} 的遥感影像识别分类方法的研究进展和现状。
+为了方便介绍，本文中将深度学习技术前提出的遥感影像分类方法称为传统的遥感影像分类方法。本节内容主要介绍了传统的高分辨率遥感影像分类识别方法和基于深度学习技术\citep{hinton2006fast, bengio2009learning, NIPS2012_4824} 的遥感影像识别分类方法的研究进展和现状。
 % ，遥感影像的聚类分割
 
 \subsection{传统的高分辨率遥感影像分类与识别方法}
 \label{subsec:1-2-1}
-早在1957年，卫星遥感技术就应用到遥感影像分类与识别任务中。目标地物的分类与识别一直以来都是遥感影像分析中的一个基础任务，对于研究目标物体或现象的发展过程与分布规律有着重要意义\cite{jensen1987introductory}。根据有无使用先验知识，遥感影像的分类方法可分为监督分类与无监督分类。监督分类是指利用样本已有先验类别训练分类模型，模型能够建立样本特征到类别标签的决策映射规则； 非监督分类是指在没有类别先验知识的前提下，只能根据样本数据内在特性进行分类，根据样本间相似性度量分类，例如聚类\cite{djukanovic1993unsupervised}。遥感影像分类方法还可基于分类单元不同，划分为基于像元和面向对象的分类方法。基于像元的分类方法将像元光谱特征作为主要分类依据，常见的基于像元的影像分类方法包括：最小距离分析法\cite{wacker1972minimum}，最大似然分类法\cite{strahler1980use}，K-均值聚类法\cite{atkinson2000geostatistical} ，ISODATA 聚类法\cite{paul2002new} 和模糊C均值聚类方法\cite{bezdek1984fcm}等。随着遥感技术迅速发展和不断成熟，影像数据空间分辨率持续增高。一般地，我们将空间分辨率高于 $5m$ 遥感影像称作高分影像\cite{zhangyongsheng2004}。高分影像相比低分影像来说光谱信息相对匮乏，而高分影像的几何、纹理等信息却更加丰富。基于像元的分类方法应用到高分辨率影像中会导致影像解译速度慢，同时椒盐噪声极易产生，因而其不适用于高分影像分类\cite{blaschke2010object}。
+早在1957年，卫星遥感技术就应用到遥感影像分类与识别任务中。目标地物的分类与识别一直以来都是遥感影像分析领域内的一个基础任务，对研究目标物体或现象的发展过程与分布规律有着重要意义\cite{jensen1987introductory}。根据有无使用先验知识，遥感影像的分类方法可分为监督分类与无监督分类。监督分类是指利用样本已有先验类别训练分类模型，模型能够建立样本特征到类别标签的决策映射规则； 非监督分类是指在没有类别先验知识的前提下，只能根据样本数据内在特性进行分类，根据样本间相似性度量分类，例如聚类\cite{djukanovic1993unsupervised}。遥感影像分类方法还可基于分类单元不同，划分为基于像元和面向对象的分类方法。基于像元的分类方法将像元光谱特征作为主要分类依据，常见的基于像元的影像分类方法包括：最小距离分析法\cite{wacker1972minimum}，最大似然分类法\cite{strahler1980use}，K-均值聚类法\cite{atkinson2000geostatistical} ，ISODATA 聚类法\cite{paul2002new} 和模糊C均值聚类方法\cite{bezdek1984fcm}等。随着遥感技术迅速发展和不断成熟，影像数据空间分辨率持续增高。一般地，我们将空间分辨率高于 $5m$ 遥感影像称作高分影像\cite{zhangyongsheng2004}。高分影像相比低分影像来说光谱信息相对匮乏，而高分影像的几何、纹理等信息却更加丰富。基于像元的分类方法应用到高分辨率影像中会导致影像解译速度慢，同时椒盐噪声极易产生，因而其不适用于高分影像分类\cite{blaschke2010object}。
 
 面向对象的高分影像分类方法将影像中邻域同质像元组成对象当作分类单元，充分利用影像地物的形状、纹理等特征, 更适合高分影像分类与识别\cite{zhangyongsheng2004}。 早在1976年，Kettig 和 Robert \cite{kettig1976classification} 就将面向对象的思想引入遥感影像研究领域中。随后，Lobo 等人 \cite{lobo1996classification} 将面向对象方法引入遥感影像分类领域，相关实验结论证明了在高分影像识别任务中面向对象方法比基于像元的方法识别速度更快，分类精度更高。Baatz \cite{baatz1999object} 基于高分辨率遥感影像特性，系统地提出高分影像的面向对象分类方法。之后，面向对象分类方法被广泛应用到高分影像分类任务中，发展迅速。 Geneletti \cite{geneletti2003method} 和 Guo \cite{guo2007object} 分别从非监督分类的研究方向表明面向对象分类方法是基于像元方法的有效替代。德国 Definiens 公司于2009 年开发的Ecognition 影像分析软件极大的推动了面向对象影像分类方法在工业商业领域的发展，同时也表明了面向对象的高分影像方法的成熟。
 
-一般的， 面向对象的遥感影像分类方法通常包含影像分割，特征提取和分类预测这三部分内容。Canny 通过提出 Canny 算子 \cite{canny1987computational} 检测出影像所有边缘点，并将边缘点依次连接形成边界从而实现影像边缘分割。Otsu 基于灰度直方图动态计算图像分割中的阈值范围，形成不同目标间差异最大化，实现阈值分割\cite{otsu1979threshold}。 Vincent \cite{vincent1991watersheds} 等结合沉浸模型提出影像的分水岭分割。 Achanta 和 Radhakrishna \cite{achanta2012slic} 基于K-均值聚类方法，采用简单的迭代聚类高效地生成影像分割单元，提出 SLIC 超像素分割算法，SLIC 分割效果被学界普遍认可。在特征提取阶段，最初采用影像的光谱、纹理和形状等低阶特征信息，但低阶特征无法获得较好的分类效果。文献 \cite{weizman2009urban} 中引入词包模型的中层语义特征实现对遥感影像信息更好的表达，实验结果表明该方法分类效果更好。 随后，Lienou 等\cite{lienou2010semantic} 将主题模型应用到词包模型的单词语义分析中，改进了前者的分类精度。He 等人 \cite{he2016remote} 针对遥感影像同物异谱的现象，结合模糊数学中不确定性理论，设计一种区间值特征对影像数据建模。目前，在特征提取的方面研究者做了大量工作，然而，高级特征的表达仍需要复杂的人工设计和反复实验验证。 分类识别阶段是对特征提取得到的数据特征，利用分类器对原始数据决策识别。目前，常用的机器学习分类方法包含随机森林 \cite{pal2005random}，支持向量机 \cite{suykens1999least} ，决策树 \cite{friedl1997decision} 和神经网络模型 \cite{haykin1994neural} 等。 在这些分类器基础上，通过结合不同分类器延申而出的集成学习 \cite{freund1996experiments} 的方法也被应用到高分影像分类中。
+一般的， 面向对象的遥感影像分类方法通常包含影像分割，特征提取和分类预测这三部分内容。Canny 通过提出 Canny 算子 \cite{canny1987computational} 检测出影像所有边缘点，并将边缘点依次连接形成边界从而实现影像边缘分割。Otsu 基于灰度直方图动态计算图像分割中的阈值范围，形成不同目标间差异最大化，实现阈值分割\cite{otsu1979threshold}。 Vincent \cite{vincent1991watersheds} 等结合沉浸模型提出影像的分水岭分割。 Achanta 和 Radhakrishna \cite{achanta2012slic} 基于K-均值聚类方法，采用简单的迭代聚类高效地生成影像分割单元，提出 SLIC 超像素分割算法，SLIC 分割效果被学界普遍认可。在特征提取阶段，最初采用影像的光谱、纹理和形状等低阶特征信息，但低阶特征无法获得较好的分类效果。文献 \cite{weizman2009urban} 中引入词包模型的中层语义特征实现对遥感影像信息更好的表达，实验结果表明该方法分类效果更好。 随后，Lienou 等\cite{lienou2010semantic} 将主题模型应用到词包模型的单词语义分析中，改进了前者的分类精度。目前，在特征提取方面研究者做了大量工作，然而，高级特征的表达仍需要复杂的人工设计和反复实验验证。 分类识别阶段是对特征提取得到的数据特征，利用分类器对原始数据决策识别。截止当前，常用的传统机器学习分类方法包含随机森林 \cite{pal2005random}，支持向量机 \cite{suykens1999least} ，决策树 \cite{friedl1997decision} 和神经网络模型 \cite{haykin1994neural} 等。 在这些分类器基础上，通过结合不同分类器延申而出的集成学习 \cite{freund1996experiments} 的方法也被应用到高分影像分类中。
+%He 等人 \cite{he2016remote} 针对遥感影像同物异谱的现象，结合模糊数学中不确定性理论，设计一种区间值特征对影像数据建模。
 
 然而，传统的高分影像分类方法只能提取影像浅层特征，无法充分表达影像信息，而采用的影像分类器大多是只有 $1\sim2$ 层的浅层结构模型，无法学习到遥感影像内部复杂特征。因此，探索结构更复杂、表征能力更强的分类模型具有重要的研究意义。
 
 \subsection{基于深度学习理论的影像分类研究现状}
 \label{subsec:1-2-2}
-深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习模型能挖掘数据低阶特征的内在规律，形成抽象的高阶特征或属性，从大量数据中建模数据内在规律。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理语、音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像分类识别，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了生成模型和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型D 。随后，基于GAN 网络的一系列生成模型方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
+深度学习的概念源于人工神经网络，最早由 Geoffrey Hinton \cite{hinton2006fast} 教授于2006年提出。深度学习模型能挖掘数据低阶特征的内在规律，形成抽象的高阶特征或属性，从大量数据中建模数据内在规律。深度学习利用多层网络模型学习抽象概念完成自我学习 \cite{lecun2015deep}。 深度学习最早应用于图像处理领域，目前在自然语言处理、语音识别、搜索推荐、游戏AI 和自动驾驶等领域广泛应用，且均表现出卓越的效果 \cite{bengio2009learning}。2012 年，Alex 等人在ILSVRC 图像识别大赛中提出了基于卷积神经网络(Convolutional Neuro Network, CNN) 结构的AlexNet \cite{NIPS2012_4824} 模型，对ImageNet 数据集上千万级的自然图像分类识别，大幅提升了图像分类精度。AlexNet 的提出首次证明了 CNN 在复杂模型下的有效性，并极大推动了有监督深度学习领域的发展。在2014年 ILSVRC 大赛上，基于 CNN 结构，Google 研究团队提出的 GoogLeNet \cite{szegedy2015going} 和牛津大学学者提出的 VGGNet \cite{simonyan2014very} 分别荣获当年 ImageNet 识别大赛的一、二名。 这两者在 AlexNet 的基础上均探索了网络深度与性能的关系，实验结果也证明了增加网络深度在一定程度上会影响网络最终的性能，使得分类错误率大幅下降。另外，GoogLeNet 中提出的 Inception 结构和 VGGNet 中提出的小卷积核多层网络结构也大幅优化了网络参数的数量，提升了训练学习速度的同时使得网络分类效果更优秀，且具有优秀的扩展泛化能力。之后，何凯明在 ResNet \cite{he2016deep} 网络模型中创造性地提出了残差学习（Residual Learning）的概念，解决了深度学习随着网络层数加深网络退化问题，使得更深层次网络模型得以训练，同时 ResNet 一并刷新了当年 ILSVRC 和 COCO 2015 图像识别大赛的最优记录。在非监督学习领域，深度学习模型近十年也发展迅速。2006年， Hinton 对传统自动编码器结构进行改进，提出了深度自编码网络(Deep AutoEncoder, DAE) \cite{hinton2006fast}。DAE 网络利用无监督逐层贪心训练算法完成对隐含层的预训练，然后用 BP 算法对整个网络参数进行调整，显著降低了深层自编码结构的性能指数，且大幅提升自编码器的学习能力。之后，基于 DAE 理论相继提出的栈式自动编码器(stacked AutoEncoder, stacked AE)\cite{bengio2007greedy}、降噪编码器(Denoise Autoencoder, dAE)\cite{vincent2008extracting} 和稀疏自编码器(Sparse AutoEncoder, SAE)\cite{ng2011sparse} 等均取得了不错的效果。2014年，Goodfellow 结合二人零和博弈的思想，创造性地提出了生成对抗网络（Generative Adversarial Network，GAN）\cite{goodfellow2014generative} 模型， 极大地促进了生成模型和计算机视觉领域（如图片生成、风格迁移和图像分割等）的发展。GAN 模型框架由两个“对抗”模型组成：捕获数据分布的生成模型 G 和估计样本来自训练数据而不是 G 的概率的判别模型D 。随后，基于GAN 网络的一系列生成模型方法如 CGAN\cite{mirza2014conditional} 、DCGAN \cite{radford2015unsupervised} 、InfoGAN \cite{chen2016infogan} 和 WGAN \cite{arjovsky2017wasserstein} 等被相继提出，不仅提升 GAN 模型生成与识别精度，同时极大丰富了GAN 网络的应用场景。
 
 % 
 
