--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -199,7 +199,7 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
 \label{sec:third}
 \subsection{实验环境}
 \label{sec:third-1}
-本章实验电脑为思腾合力IR4200 服务器，其主要参数如下：CPU 为两块 Intel Xeon E5-2690 2.9GHz 8核 16线程正式版处理器，内存为128G 容量8通道DDR4 服务器内存，GPU 为技嘉 1080Ti，显存 12G。实验中使用 Ubuntu 16.04 LTS 操作系统，编程语言为Python 3.5，神经网络模型采用谷歌开源框架Tensorflow 编程实现，Tensoflow 版本为1.5.0。
+本文所有实验使用电脑设备均为思腾合力IR4200 服务器，其主要参数如下：CPU 为两块 Intel Xeon E5-2690 2.9GHz 8核 16线程正式版处理器，内存为128G 容量8通道DDR4 服务器内存，GPU 为技嘉 1080Ti，显存 12G。实验中使用 Ubuntu 16.04 LTS 操作系统，编程语言为Python 3.5，神经网络模型采用谷歌开源框架Tensorflow 编程实现，Tensoflow 版本为1.5.0。
 
 \subsection{评价指标}
 \label{sec:third-2}
@@ -228,7 +228,7 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
 \subsection{网络参数}
 \label{sec:third-3}
 
-本节实验中输入图像为 $256\times 256\times 4$ 的4波段融合影像（近红外、红、绿、DSM），生成网络中的分割模型权值使用ImageNet 上预训练好的基于VGGNet16\cite{simonyan2014very} 的全卷积网络权值初始化，式\ref{eq:4-7} 中GAN 模型中的目标函数权衡因子为$\lambda = 2$ ，使用Adam \cite{kingma2014adam} 优化器计算梯度更新，Adam 优化器具有自适应的学习率，初始学习率为 $\alpha = 10^{-4}$，梯度动量一阶和二阶矩估计指数衰减率分别初始化为$\beta_1 = 0.9$ 和$\beta_2 = 0.9999$，$\epsilon = 10^{-8}$ 防止除数为$0$。实验中设置批大小（Batch size） 为$128$, epoch 为$150$ 时能取得更好的训练效果。
+本节实验中输入图像为 $256\times 256\times 4$ 的4波段融合影像（近红外、红、绿、DSM），生成网络中的分割模型权值使用ImageNet 上预训练好的基于VGGNet16\cite{simonyan2014very} 的全卷积网络权值初始化，式\ref{eq:4-7} 中GAN 模型中的目标函数权衡因子为$\lambda = 2$ ，使用Adam \cite{kingma2014adam} 优化器计算梯度更新，Adam 优化器具有自适应的学习率，初始学习率为 $\alpha = 10^{-4}$，梯度动量一阶和二阶矩估计指数衰减率分别初始化为$\beta_1 = 0.9$ 和$\beta_2 = 0.9999$，$\epsilon = 10^{-8}$ 防止除数为$0$。实验中设置批大小（Batch size） 为$128$, epoch 为$150$ 时能取得更好的分类效果。
 
 模型生成器G 中的网络压缩部分由五个卷积模块堆叠而成，其作用是逐层提取影像特征。每个卷积模块均包含$2/3$ 个卷积层和$1$ 个尺寸$2\times 2$最大池化层，为了保证卷积前后特征图尺寸不变，所有卷积层均采用边界填充，最大池化层使得特征图尺寸缩小为池化前的一半。生成器G 中反卷积恢复为四个反卷积的上采样模块，其作用是逐层扩大特征图大小、恢复影像细节信息。每个上采样模块中包含一次反卷积操作，反卷积生成两倍维度的特征图，再接两层卷积层提取特征。最后通过一个$1\times 1$ 大小的$1$ 维卷积层将特征图维度降维$1$，通过Softmax 函数输出预测结果的像素类别。另外，在反卷积中使用跳层连接网络压缩部分与反卷积层特征图大小相同的卷积层，从而将影像低阶特征和高阶特征融合，保证更精细的分割结果。
 
