--- a/data/cover.tex
+++ b/data/cover.tex
@@ -12,7 +12,7 @@
 \makeatother
 
 \cauthor{江涛}
-\csupervisor{余先川教授、胡丹副教授} %\\ \hspace*{6em}}余先川教授、胡丹副教授
+\csupervisor{余先川  教授  胡丹  副教授} %\\ \hspace*{6em}}余先川教授、胡丹副教授
 \cdepartment{信息科学与技术学院 2016级}
 \cmajor{计算机软件与理论}
 \cnum{201621210026}
