完成论文修改

--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -20,7 +20,7 @@
 
 \section{未来的期望}
 \label{sec:5-2}
-本文提出的影像分类的改进方法，一定程度上均能提升遥感影像地物分类边界划分的效果，同时也能提高同类别地物区域像素点的空间一致性。之后的研究可从以下方面开展：
+本文提出的影像分类的改进方法，均能提升遥感影像地物分类精度，同时也有利于保持同类别地物区域像素点的空间一致性。之后的研究可从以下方面开展：
 \begin{enumerate}[(1)]
   \item  第~\ref{cha:chap03} 章提出的基于CGAN 影像分类方法在识别“车辆”时相对其他几类地物精度较低，原因是训练集影像中含有“车辆”的像素点占比较低，后续研究中构建模型目标函数时可以考虑给像素占比低的地物一个较高的权值，研究加权后的交叉熵代价能否提高像素占比小地物的识别效果。
   \item  第\ref{cha:chap04} 章融合边界特征方法中，融合边界掩膜时采取矩阵点乘的操作进行特征融合，其他方式的特征融合方法可以进一步研究探讨。
